--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@types/jquery": "^2.0.34",
+    "@types/tinymce": "^4.5.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-tslint": "^8.0.0",
     "gulp-typescript": "^3.1.6",
