Beginning to refactor fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "noEmitOnError": false,
         "removeComments": true,
         "sourceMap": false,
+        "noResolve": false,
         "types": [
             "jquery",
             "tinymce"
